--- a/_layouts/lexiconEntry.html
+++ b/_layouts/lexiconEntry.html
@@ -8,11 +8,11 @@
 <p style="text-align:center"></p>
 <div style="left:-5.5rem;position: absolute;top:3.3rem;"><a class="shadow" id="prev" href="/{{site.siteprefix}}/w/{{page.preventry}}.html ">&laquo;</a> {{page.strongNumber}} 
 <a class="shadow" id="next" href="/{{site.siteprefix}}/w/{{page.nextentry}}.html ">&raquo;</a></div>
-<h1>{{page.phonemes}} <span id="bh" dir="rtl">{{page.hebWord}}</span> ‘{{heading}}’ <span id="gg" style="font-size: 65%; font-family: EB Garamond;font-weight: normal;">({{-site.data.fulllangnames[page.lang]-}})</span></h1>
+<h1><span class="st">{{page.phonemes}}</span> <span id="bh" dir="rtl">{{page.hebWord}}</span> ‘{{heading}}’ <span id="gg" style="font-size: 65%; font-family: EB Garamond;font-weight: normal;">({{-site.data.fulllangnames[page.lang]-}})</span></h1>
 <p><!--- <span id="gg">{{site.lexicalentry1etymology}}:</span> {{page.etymDesc}}--->{%if page.etymComplete %} | <span id="gg">{{site.lexicalentry2roots}}:</span> {%assign etyms = page.etymComplete | split: "|" %}{%for etym in etyms %}{%assign et = etym | split: "+" %}<a class="shadow" href="/{{site.siteprefix}}/w/{{-et.first-}}"><span id="bh">{{-et.last-}}</span></a>{% endfor %}{%endif%}
 {%if page.variants %} | <span id="gg">{{site.lexicalentry3variants}}:</span> {{page.variants}}
 {% endif %}{{page.placeholder3}}</p>
-<p><span class="ss"><strong>{{page.phonemes}} </strong></span>{%if morphology %}{{morphology}}{%endif%}<br>{{entrycontent}}</p>
+<p><span class="ssl"><strong>{{page.phonemes}} </strong></span>{%if morphology %}{{morphology}}{%endif%}<br>{{entrycontent}}</p>
 </article>
 <div style="display: flex;"><p style="margin-bottom:27px;display: flex;flex-wrap: wrap;flex-direction:row;line-height:1.5rem"><span id="toc" class="ss">{{site.lexicalentry5mentionedin}} </span>{%assign sn=page.strongNumber | minus: 1%}{{site.data.precompiled_links[sn]|map: "links"}}
 </p></div>
