--- a/css/tufte.css
+++ b/css/tufte.css
@@ -934,6 +934,9 @@ span#toc {
   font-family:"Inter";
   font-size: 82%;}
 
+.ssl {
+  font-family:"Inter"; 
+
 .g {color:gray;}
 
 .bis {font-size:200%;}
