--- a/css/tufte.css
+++ b/css/tufte.css
@@ -40,7 +40,7 @@
     font-weight: 700;}
 
 #bh {
-      font-family: "Ezra SIL";
+      font-family: "Ezra SIL", serif;
       font-weight: normal;
 } 
 
