--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,6 +5,11 @@
 <title>{{title}}</title>
 <meta name="description" content="{{title}}">
 <!-- Google Fonts loaded here depending on setting in _data/options.yml true loads font, blank does not-->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Noto+Serif+Hebrew:wght@500&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400,600&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400,400i,700,700i&display=swap" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="/{{site.siteprefix}}/css/tufte.css">
 <link rel="stylesheet" type="text/css" href="/{{site.siteprefix}}/css/print.css" media="print">
 <link rel="alternate" type="application/rss+xml" title="{{title}}" href="{{site.website}}/{{site.siteprefix}}/feed.xml"/>
