exper no siteprefix

--- a/_layouts/lexiconEntry.html
+++ b/_layouts/lexiconEntry.html
@@ -7,10 +7,10 @@
 <!DOCTYPE html>
 {% include head.html %}
 <p style="text-align:center"></p>
-<div class="divnav"><a class="shadow" id="prev" href='/{{site.siteprefix}}/w/{%if page.strongNumber == "9000" %}8674{%elsif page.strongNumber == "1"%}9012{% else %}{{page.strongNumber | minus: 1}}{%endif%}.html '>&laquo;</a> {{page.strongNumber}} 
-<a class="shadow" id="next" href='/{{site.siteprefix}}/w/{%if page.strongNumber == "8674" %}9000{%elsif page.strongNumber == "9012"%}1{% else %}{{page.strongNumber | plus: 1}}{%endif%}.html'>&raquo;</a></div>
+<div class="divnav"><a class="shadow" id="prev" href='/w/{%if page.strongNumber == "9000" %}8674{%elsif page.strongNumber == "1"%}9012{% else %}{{page.strongNumber | minus: 1}}{%endif%}.html '>&laquo;</a> {{page.strongNumber}} 
+<a class="shadow" id="next" href='/w/{%if page.strongNumber == "8674" %}9000{%elsif page.strongNumber == "9012"%}1{% else %}{{page.strongNumber | plus: 1}}{%endif%}.html'>&raquo;</a></div>
 <h1><span class="st">{{page.phonemes}}</span> <span id="bh" dir="rtl">{{page.hebWord}}</span> ‘{{heading}}’ <span id="gg" class="grlang">({{-site.data.fulllangnames[page.lang]-}})</span></h1>
-<p><span id="gg">{{site.lexicalentry1etymology}}:</span> {{pagedata.etymDesc}}{%if page.etymComplete %} | <span id="gg">{{site.lexicalentry2roots}}:</span> {%assign etyms = page.etymComplete | split: "|" %}{%for etym in etyms %}{%assign et = etym | split: "+" %}<a class="shadow" href="/{{site.siteprefix}}/w/{{-et.first-}}"><span id="bh">{{-et.last-}}</span></a>{% endfor %}{%endif%}
+<p><span id="gg">{{site.lexicalentry1etymology}}:</span> {{pagedata.etymDesc}}{%if page.etymComplete %} | <span id="gg">{{site.lexicalentry2roots}}:</span> {%assign etyms = page.etymComplete | split: "|" %}{%for etym in etyms %}{%assign et = etym | split: "+" %}<a class="shadow" href="/w/{{-et.first-}}"><span id="bh">{{-et.last-}}</span></a>{% endfor %}{%endif%}
 {%if page.variants %} | <span id="gg">{{site.lexicalentry3variants}}:</span> {{page.variants}}
 {% endif %}{{page.placeholder3}}</p>
 <p><span class="ssl"><strong>{{page.phonemes}} </strong></span>{%if morphology %}{{morphology}}{%endif%}<br>{{entrycontent}}</p>
