--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,7 +1,7 @@
 <head lang="{{site.lang}}">{%-if page.dir == "/w/"-%}{%capture title%}{{page.phonemes}} {{page.hebWord}} ‘{{page.heading|replace: "|", ", "}}’ ({{site.heading1}} {{page.strongNumber}}) — {{site.sitename}}{%endcapture%}{%-elsif page.name=="index.html"-%}{%capture title%}{{site.index1title}} — {{site.sitename}}{%endcapture%}{%-else-%}{% assign codeword=page.nameid | split: "-" | first %}{%capture title%}{{site.data.lexiconnames[codeword]}} {% if page.ordered==site.landingpartial1 %}{{site.landingpartial5}}{% elsif page.ordered==site.landingpartial3 %}{{site.landingpartial6}}{%endif%} — {{site.sitename}}{%endcapture%}{%-endif-%}
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="icon" type="image/png" href="/{{site.siteprefix}}/assets/img/favicon.png"/>
+<link rel="icon" type="image/png" href="/assets/img/favicon.png"/>
 <title>{{title}}</title>
 <meta name="description" content="{{title}}">
 <!-- Google Fonts loaded here depending on setting in _data/options.yml true loads font, blank does not-->
@@ -10,9 +10,9 @@
 <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+Hebrew:wght@500&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400,600&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400,400i,700,700i&display=swap" rel="stylesheet">
-<link rel="stylesheet" type="text/css" href="/{{site.siteprefix}}/css/tufte.css">
-<link rel="stylesheet" type="text/css" href="/{{site.siteprefix}}/css/print.css" media="print">
-<link rel="alternate" type="application/rss+xml" title="{{title}}" href="{{site.website}}/{{site.siteprefix}}/feed.xml"/>
+<link rel="stylesheet" type="text/css" href="/css/tufte.css">
+<link rel="stylesheet" type="text/css" href="/css/print.css" media="print">
+<link rel="alternate" type="application/rss+xml" title="{{title}}" href="{{site.website}}/feed.xml"/>
 {% if page.dir == "/w/"%}<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js"></script>
 <script type="text/javascript">
 document.onkeydown = function(evt) {
@@ -30,7 +30,7 @@ document.onkeydown = function(evt) {
 </head>
 <body>
 <header>
-<nav class="group"><a href="/{{site.siteprefix}}">
+<nav class="group"><a href="/">
 <h3>{{site.sitename}}</h3><h4>{{site.subname}}</h4></a></nav>
 </header>
 <article class="group">
