--- a/css/tufte.css
+++ b/css/tufte.css
@@ -18,7 +18,7 @@
   font-family: "Noto Serif Hebrew"; }
 @font-face {
     font-family: "Ezra SIL";
-    src: url('/{{site.siteprefix}}/fonts/SILEOT.ttf');
+    src: url('/fonts/SILEOT.ttf');
 }
 
 #bh {
@@ -273,7 +273,7 @@ h3 {
   line-height: 1.08888888888889; }
 
 h1:before {
-  background-image: url("/{{site.siteprefix}}/assets/img/sun.svg");
+  background-image: url("/assets/img/sun.svg");
   background-size: 50px 100px;
   content: "";
   width: 50px;
@@ -283,7 +283,7 @@ h1:before {
   position: absolute; }
 
 h2:nth-of-type(3n+0):before {
-  background-image: url("/{{site.siteprefix}}/assets/img/horse.svg");
+  background-image: url("/assets/img/horse.svg");
   background-size: 50px 100px;
   content: "";
   width: 50px;
@@ -292,7 +292,7 @@ h2:nth-of-type(3n+0):before {
   position: absolute; }
 
 h2:nth-of-type(3n+1):before {
-  background-image: url("/{{site.siteprefix}}/assets/img/rug.svg");
+  background-image: url("/assets/img/rug.svg");
   background-size: 50px 100px;
   content: "";
   width: 50px;
@@ -301,7 +301,7 @@ h2:nth-of-type(3n+1):before {
   position: absolute; }
 
 h2:nth-of-type(3n+2):before {
-  background-image: url("/{{site.siteprefix}}/assets/img/flower.svg");
+  background-image: url("/assets/img/flower.svg");
   background-size: 50px 100px;
   content: "";
   width: 50px;
@@ -310,7 +310,7 @@ h2:nth-of-type(3n+2):before {
   position: absolute; }
 
 h3:not(.contrast):nth-of-type(3n+2):before {
-  background-image: url("/{{site.siteprefix}}/assets/img/horse.svg");
+  background-image: url("/assets/img/horse.svg");
   background-size: 50px 100px;
   content: "";
   width: 50px;
@@ -319,7 +319,7 @@ h3:not(.contrast):nth-of-type(3n+2):before {
   position: absolute; }
 
 h3:not(.contrast):nth-of-type(3n+0):before {
-  background-image: url("/{{site.siteprefix}}/assets/img/rug.svg");
+  background-image: url("/assets/img/rug.svg");
   background-size: 50px 100px;
   content: "";
   width: 50px;
@@ -328,7 +328,7 @@ h3:not(.contrast):nth-of-type(3n+0):before {
   position: absolute; }
 
 h3:not(.contrast):nth-of-type(3n+1):before {
-  background-image: url("/{{site.siteprefix}}/assets/img/flower.svg");
+  background-image: url("/assets/img/flower.svg");
   background-size: 50px 100px;
   content: "";
   width: 50px;
