--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,1 +1,16 @@
-{{content}}
+<!DOCTYPE html>
+{% include head.html %}
+<body>
+    <header>
+    <nav class="group"><a href="/">
+    <h3>{{site.sitename}}</h3><h4>{{site.subname}}</h4></a></nav>
+    </header>
+    <article class="group">
+    <p class="bar1"></p><p class="bar2"></p><p class="bar3"></p>
+    {{content}}
+</article>
+{% include footer.html %}
+</body></html>
+
+
+
