--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,8 +1,10 @@
-<head lang="{{site.lang}}">{%-if page.layout == "bibletext"-%}{%capture title%}{{page.phonemes}} {{page.hebWord}} ‘{{page.heading|replace: "|", ", "}}’ ({{site.heading1}} {{page.strongNumber}}) — {{site.sitename}}{%endcapture%}{%-elsif page.name=="index.html"-%}{%capture title%}{{site.index1title}} — {{site.sitename}}{%endcapture%}{%-else-%}{% assign codeword=page.nameid | split: "-" | first %}{%capture title%}{{site.data.lexiconnames[codeword]}} {% if page.ordered==site.landingpartial1 %}{{site.landingpartial5}}{% elsif page.ordered==site.landingpartial3 %}{{site.landingpartial6}}{%endif%} — {{site.sitename}}{%endcapture%}{%-endif-%}
+{% assign lang = page.dir | replace: "/", ""%}
+{%- assign langtitle = site.data.booknames[page.title][lang] %}
+<head lang="{{lang}}">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="icon" type="image/png" href="/assets/img/favicon.png"/>
-<title>{{title}}</title>
+<title>{% if page.layout == "bibletext" %}{{langtitle}}{% else %}{{site.subname[lang]}}{% endif %} — {{site.sitename[lang]}}</title>
 <meta name="description" content="{{title}}">
 <!-- Google Fonts loaded here depending on setting in _data/options.yml true loads font, blank does not-->
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -12,7 +14,6 @@
 <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400,400i,700,700i&display=swap" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="/css/tufte.css">
 <link rel="stylesheet" type="text/css" href="/css/print.css" media="print">
-<link rel="alternate" type="application/rss+xml" title="{{title}}" href="{{site.website}}/feed.xml"/>
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js"></script>
 <script type="text/javascript">
 document.onkeydown = function(evt) {
