--- a/_layouts/bibletext.html
+++ b/_layouts/bibletext.html
@@ -9,7 +9,9 @@ layout: default
 {{site.data.parclose[page.id]}}
 <p>{% for elem in page.verses %}{% assign number = elem.first[0] | split: "."%}{% assign ch = number[0] | plus: 0 %}{% assign v = number[1] | plus: 0%}
     {%- if site.data.poeticverses[page.id] contains elem.first[0] -%}{% assign poetic = 1 %}{% else %}{% assign poetic = false %}{% endif %}
+    {% if poetic %}</p><p class="poeticpar">{% endif %}
     <span class="{{page.id}}-{{ch}}-{{v}} {% if poetic %} poeticverse {% endif %}">{% include margnum.html ch=ch v=v p=poetic %}{{elem.first[1]}}</span>
+    {% if poetic %}</p><p>{% endif %}
     {% if site.data.parnun[page.id] contains elem.first[0] %} ║ {% endif %}
     {% if site.data.parstuma[page.id] contains elem.first[0] %} &emsp; ~ &emsp; ~ &emsp; ~ &emsp; ~ &emsp; ~ &emsp; ~ &emsp; ~ &emsp;
     {% elsif site.data.parptuha[page.id] contains elem.first[0] %}</p><p> {% endif %}
